test/Vehicle/Test/CompileMode/Error/LinearityErrors/quadraticInputOutput.vcl
network f : Vector Rat 1 -> Vector Rat 1

property : Bool
property = forall (x : Rat) . (f [x] ! 0) * x > 0